# lrn-sparseatt

./: .gitignore  1_profile.py  2_profile.py  3_profile.py  4_profile.py  5_profile.py  README.md  pyproject.toml  setup.py
lrn_sparseatt/: __init__.py  attention.py  masks.py  ops.py
lrn_sparseatt/extension/: muladd.cpp  sparseattn.cpp
notebooks/: 1_PyTorch Implementation.ipynb  2_Nested Tensors.ipynb  3_CPP Sparse MM.ipynb  4_CPP.ipynb  5_SparseTensor.ipynb  Masks.ipynb
profiles/: 1_PyTorchImplementation.txt  1_profile_results.md  3_profile_results.md  3_profile_results_bis.md  4_profile_results.md  5_profile_results.md
src/lrn_sparseatt/: __init__.py  attention.py  masks.py
