[project]
name = "lrn-sparseatt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tbluche", email = "teo777@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch",
    "einops",
    "numpy",
    "tabulate"
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
