[project]
name = "lrn-sparseatt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tbluche", email = "teo777@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch",
    "einops",
    "numpy",
    "tabulate"
]

[build-system]
requires = [
    "setuptools",
    "torch>=2.10.0",
]
build-backend = "setuptools.build_meta"
